--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.section {
+  background-color: white;
+  height: 70%;
+  width: clamp(20%, 500px, 90%);
+  border: 1px solid #b8b8b8;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.1) 0px 8px 32px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.mention-menu {
+  transition: all 400ms ease;
+}
+
+.members-tab::-webkit-scrollbar {
+  background-color: transparent !important;
+  width: 5px;
+}
+
+.members-tab::-webkit-scrollbar-thumb {
+  background-color: #b6b6b6;
+}
+
+.recording {
+    fill: red;
+    animation: recording 400ms linear infinite alternate;
+}
+
+@keyframes recording {
+  from {
+    transform: scale(1);
+  }
+  to{
+    transform: scale(.9);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+
+.input-container-record{
+    animation: springywidth 600ms cubic-bezier(0.25, 0.1, 0.25, 1) 1 ;
+}
+
+
+@keyframes springywidth {
+    0%{
+        width: 100%;
+    }
+    50%{
+        width: 95%;
+    }
+    100%{
+        width: 100%;
+    }
+}
+
+
+::placeholder{
+    transition: all 200ms ease-in-out;
 }
