--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,17 +6,23 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  width: 100%;
+  background-color: #222;
+  height: auto;
+}
+
 .section {
   background-color: white;
   height: 750px;
   width: clamp(20%, 500px, 90%);
-  border: 1px solid #e1dddd;
-  border-radius: 40px;
+  /* border: 1px solid #e1dddd; */
+  border-radius: 14px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  box-shadow: rgba(17, 17, 26, 0.043) 0px 4px 16px,
-    rgba(17, 17, 26, 0.043) 0px 8px 32px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(0, 0, 0, 0.6) 0px 10px 36px 0px, rgba(0, 0, 0, 0.6) 0px 0px 0px 1px; */
 }
 
 .mention-menu {
@@ -108,4 +114,14 @@
 
 .single-text {
   border-radius: 30px !important;
+}
+
+
+.tooltip{
+  background: rgba(0, 0, 0, 0.47);
+backdrop-filter: blur(5.6px);
+-webkit-backdrop-filter: blur(5.6px);
+color: #ffffff;
+border: 1px solid #ccc;
+border: 1px solid #000;
 }
