--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,9 @@
 
 body {
   width: 100%;
-  background-color: #222;
+  background-color: rgba(9, 9, 12, 1);
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
+  background-repeat: repeat;
   height: auto;
 }
 
@@ -16,13 +18,11 @@ body {
   background-color: white;
   height: 750px;
   width: clamp(20%, 500px, 90%);
-  /* border: 1px solid #e1dddd; */
   border-radius: 14px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  /* box-shadow: rgba(0, 0, 0, 0.6) 0px 10px 36px 0px, rgba(0, 0, 0, 0.6) 0px 0px 0px 1px; */
 }
 
 .mention-menu {
@@ -116,12 +116,34 @@ body {
   border-radius: 30px !important;
 }
 
+.tooltip {
+  background-color: #e4e4e48a;
+  backdrop-filter: blur(10.6px);
+  -webkit-backdrop-filter: blur(5.6px);
+  color: #222;
+  transition: all 0.6s ease;
+  border: 1px solid #d1d0d0;
+}
 
-.tooltip{
-  background: rgba(0, 0, 0, 0.47);
-backdrop-filter: blur(5.6px);
--webkit-backdrop-filter: blur(5.6px);
-color: #ffffff;
-border: 1px solid #ccc;
-border: 1px solid #000;
+
+.picture-gallery{
+  backdrop-filter: blur(10px);
+  background-color: #ffffff8a;
+  background-blend-mode: overlay;
+  color: #222;
+  transition: height 0.5s ease;
+  border-radius: 10px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
+}
+
+.image-container{
+  /* backdrop-filter: blur(5px); */
+  border-radius: 20px;
+  background-color: #ffffff00;
+  scroll-margin-right: 20px;
+}
+
+.image-container::-webkit-scrollbar{
+  display: none;
 }
